chore: Edit deploy page name - packege json

--- a/package.json
+++ b/package.json
@@ -39,5 +39,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://task11.github.io/movie-app-proj"
+  "homepage": "https://task11.github.io/movie-app-react-frontend/"
 }
